# rust-yew-axum

./: .gitignore  README.md
server/: .env  Cargo.toml
server/migrations/2023-10-08-113336_base/: down.sql  up.sql
server/migrations/2023-10-14-160230_shop/: down.sql  up.sql
server/src/: core.rs  main.rs  model.rs  route.rs  schema.rs
server/src/config/: app.rs  db.rs  mod.rs
server/src/handler/: auth.rs  cmd.rs  item.rs  mod.rs  ws.rs
server/src/repository/: item.rs  user.rs
server/src/util/: jwt.rs  mod.rs
web/: Cargo.toml  index.html
web/src/: app.rs  const.rs  main.rs  router.rs  state.rs  util.rs
web/src/component/: alert_label.rs  card_video.rs  mod.rs
web/src/layout/: header.rs  mod.rs  nav.rs
web/src/page/: channel.rs  error.rs  history.rs  home.rs  like.rs  login.rs  mod.rs  register.rs  subscribe.rs
