[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
tracing = "0.1.37"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace", "cors", "catch-panic"] }
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "8.3.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
md5="0.7.0"