[package]
name = "yew-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
bevy = "0.11.2"
gloo = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
validator = { version = "0.16.0", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3.61", features = ["HtmlInputElement", "Window"] }